# AIKnowledgeHarvester

./: .coverage  .gitignore  .topics.txt  README.md  config.yaml  pyproject.toml
KnowledgeBase/: harvester.db
KnowledgeBase/2013/12/Linux_Mint_Security/Python_3_12_13__3_11_15_and_3_10_20_are_now_available/: article.html  article.json  article.md  metadata.json  summary.md
KnowledgeBase/2025/02/Local_RAG_Pipelines/Python_3_13_2_and_3_12_9_now_available/: article.html  article.json  article.md  metadata.json  summary.md
KnowledgeBase/2026/06/Google_Cloud_AI/Mitigated_API_authentication_bypass_for_python_org_download_metadata/: article.html  article.json  article.md  metadata.json  summary.md
KnowledgeBase/2026/06/Python_3_12/Packaging_Council_Inaugural_Election_Dates/: article.html  article.json  article.md  metadata.json  summary.md
KnowledgeBase/2026/07/Artificial_Intelligence/Local_Testing/: article.html  article.json  article.md  metadata.json  summary.md
harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
harvester/api/: app.py
harvester/cli/: main.py
harvester/config/: config.py
harvester/core/: ai.py  models.py  rag.py  topics.py
harvester/crawler/: downloader.py
harvester/database/: sqlite_db.py
harvester/embeddings/: generator.py
harvester/extractor/: content.py
harvester/logging_util/: __init__.py
harvester/rss/: manager.py
harvester/search/: manager.py
harvester/storage/: manager.py
harvester/workers/: pipeline.py
tests/: test_harvester.py
